fix: resolved responsive bugs on mobile

--- a/home.css
+++ b/home.css
@@ -63,6 +63,7 @@
     height: 40px;
     top: 69px;
     border-top: 1px solid rgba(53, 48, 48, 0.233);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .sub-nav ul{
@@ -112,4 +113,19 @@
 
 .composed_logo img {
     width: 76px;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .sub-nav {
+        display: none;
+    }
+
+    .composed_logo {
+        margin-top: 12vh;
+    }
+
+    .centered_search-bar {
+        width: 76%;
+    }
 }
